--- a/index.html
+++ b/index.html
@@ -358,10 +358,10 @@
     <div class="container">
       <div class="hero">
         <nav class="navbar">
-          <a href="https://github.com/YOUR_USERNAME/portr-windows/releases" class="nav-icon" title="Download for Windows">
+          <a href="https://github.com/tech9ic/Portr/releases/download/v1.7.25/Portr.v1.7.25.zip" class="nav-icon" title="Download for Windows">
             <i class="fas fa-download"></i>
           </a>
-          <a href="https://github.com/YOUR_USERNAME/portr-windows" class="nav-icon" title="View on GitHub">
+          <a href="https://github.com/tech9ic/Portr" class="nav-icon" title="View on GitHub">
             <i class="fab fa-github"></i>
           </a>
         </nav>
